2015-07-18  6.9.1-10 Dirk lemstra <dirk@lem.....org>
  * Removed incorrect EOF check in the DDS reader (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28065).

2015-07-18  6.9.1-10 Cristy  <quetzlzacatenango@image...>
  * Fixed undefined behaviors (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28067).
  * Return exception message for unknown image properties.

2015-07-18  6.9.1-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-9, SVN revision 19200.

2015-07-12  6.9.1-9 Dirk Lemstra <dirk@lem.....org>
  * Fixed issue with radial gradient in MVG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27995).

2015-07-11  6.9.1-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-8, SVN revision 19167.

2015-06-25  6.9.1-8 Cristy  <quetzlzacatenango@image...>
  * Correct install location of the Magick++ headers (reference
    https://github.com/ImageMagick/ImageMagick/pull/17/commits).
  * Different gif cropping behavior between versions (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28013).
  * Cannot read properly simple psd file (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28002).

2015-07-04  6.9.1-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-7, SVN revision 19121.

2015-06-27  6.9.1-7 Eric Dalquist
  * Fixed and escaped output of the json coder. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=27894).

2015-06-25  6.9.1-7 Cristy  <quetzlzacatenango@image...>
  * Support BPG image format (respects -quality option).
  * A bordered transparent image now remains transparent (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=5&t=27937).
  * The -update option behavior restored (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=27939).

2015-06-13  6.9.1-6 Cristy  <quetzlzacatenango@image...>